fix navigation issues on mobile, fix logo spacing

--- a/src/assets/sass/custom.scss
+++ b/src/assets/sass/custom.scss
@@ -167,6 +167,18 @@ button, .stc-btn {
   display: flex;
 }
 
+.logo-container {
+  width: 100%;
+  height: 160px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  img {
+    width: 120px;
+  }
+}
+
 /* RESPONSIVE FOR TABLETS */
 
 @media (max-width: 992px) {
